--- a/urunler.html
+++ b/urunler.html
@@ -221,6 +221,11 @@ td {
             products.push(product);
             localStorage.setItem('ayz_plastik_products', JSON.stringify(products));
 
+            addProductToTable(product);
+            document.getElementById('productForm').reset();
+        });
+
+        function addProductToTable(product) {
             var table = document.getElementById('productsTable').getElementsByTagName('tbody')[0];
             var newRow = table.insertRow();
 
@@ -228,28 +233,14 @@ td {
             var cell2 = newRow.insertCell(1);
             var cell3 = newRow.insertCell(2);
 
-            cell1.textContent = productName;
-            cell2.textContent = productWeight;
-            cell3.textContent = productSize;
-
-            document.getElementById('productForm').reset();
-        });
+            cell1.textContent = product.name;
+            cell2.textContent = product.weight;
+            cell3.textContent = product.size;
+        }
 
         window.onload = function() {
             var products = JSON.parse(localStorage.getItem('ayz_plastik_products')) || [];
-            var table = document.getElementById('productsTable').getElementsByTagName('tbody')[0];
-
-            products.forEach(function(product) {
-                var newRow = table.insertRow();
-
-                var cell1 = newRow.insertCell(0);
-                var cell2 = newRow.insertCell(1);
-                var cell3 = newRow.insertCell(2);
-
-                cell1.textContent = product.name;
-                cell2.textContent = product.weight;
-                cell3.textContent = product.size;
-            });
+            products.forEach(addProductToTable);
         };
     </script>
 </body>
