--- a/liste.html
+++ b/liste.html
@@ -183,27 +183,56 @@ td {
 .select-btn:hover, .delete-btn:hover, .copy-btn:hover {
     background: #555;
 }
-
-/* Mobil uyumluluk için medya sorguları */
-@media (max-width: 768px) {
-    form {
-        padding: 10px;
-    }
-    table, th, td {
-        padding: 8px;
-    }
-    .select-btn, .delete-btn, .copy-btn {
-        display: block;
-        width: calc(33.33% - 10px);
-        margin: 5px auto;
-    }
-    .openbtn {
-        padding: 8px 10px;
-        font-size: 18px;
-    }
-    header h1 {
-        font-size: 24px;
-    }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-top: 60px;
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 8px;
+}
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+}
+.modal-header h2 {
+    margin: 0;
+}
+.close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+}
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 10px;
+    border-top: 1px solid #ddd;
+}
+.modal-footer button {
+    margin-left: 10px;
 }
     </style>
 </head>
