--- a/liste.html
+++ b/liste.html
@@ -234,6 +234,28 @@ td {
 .modal-footer button {
     margin-left: 10px;
 }
+
+/* Mobil uyumluluk için medya sorguları */
+@media (max-width: 768px) {
+    form {
+        padding: 10px;
+    }
+    table, th, td {
+        padding: 8px;
+    }
+    .select-btn, .delete-btn, .copy-btn {
+        display: block;
+        width: calc(33.33% - 10px);
+        margin: 5px auto;
+    }
+    .openbtn {
+        padding: 8px 10px;
+        font-size: 18px;
+    }
+    header h1 {
+        font-size: 24px;
+    }
+}
     </style>
 </head>
 <body>
