--- a/liste.html
+++ b/liste.html
@@ -347,8 +347,34 @@ td {
                 selectCheckbox.type = 'checkbox';
                 selectCheckbox.value = index;
                 cell6.appendChild(selectCheckbox);
+                var pdfBtn = document.createElement('button');
+                pdfBtn.textContent = 'PDF';
+                pdfBtn.className = 'copy-btn';
+                pdfBtn.onclick = function () {
+                    generatePDF(order);
+                };
+                cell6.appendChild(pdfBtn);
+
             });
+
         }
+        function generatePDF(order) {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+
+            doc.setFontSize(14);
+            doc.text("MAY Plastik Sipariş Bilgisi", 20, 20);
+            doc.setFontSize(12);
+            doc.text(`Müsteri: ${order.customerName}`, 20, 40);
+            doc.text(`Urun: ${order.product}`, 20, 50);
+            doc.text(`Miktar: ${order.quantity}`, 20, 60);
+            doc.text(`Toplam Agirlik: ${order.totalWeight.toFixed(2)} kg`, 20, 70);
+            doc.text(`Siparis Tarihi: ${order.date}`, 20, 80);
+
+            const filename = `siparis_${order.customerName}_${order.date}.pdf`;
+            doc.save(filename);
+        }
+
 
         function filterOrders() {
             var customerName = document.getElementById('customerName').value;
@@ -464,5 +490,7 @@ td {
             loadCustomersAndProducts();
         };
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
 </body>
 </html>
