--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ td {
         <a href="index.html">Ana Sayfa</a>
         <a href="liste.html">Liste</a>
         <a href="musteriler.html" target="_blank">Müşteriler</a>
+        <a href="urunlerebak.html">Ürünler</a>
     </div>
     <button class="openbtn" onclick="openNav()">&#9776; Menü</button>
     <div id="main">
